# S-curit--routi-re

./: .pre-commit-config.yaml  Accidents_Routiers_Leila.ipynb  README.md  carte_accidents.html  features.pkl  scaler.pkl
.github/workflows/: build.yml  ci.yml  release.yml  sync-develop.yml
.ipynb_checkpoints/: Prediction-accidents-checkpoint.ipynb  carte_accidents-checkpoint.html
docs/: COMPARATIF_OUTILS.md  PHASE2-BRANCHES-COMMITS.md  PHASE3-CI-PIPELINE.md  PHASE4-PRECOMMIT.md  PHASE5-DOCKER-GHCR.md  PHASE6-SEMANTIC-RELEASE.md  PROBLEMES_DETECTES.md  VEILLE_CICD.md
projet_accidents/: .dockerignore  .env  .env.example  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  INSTRUCTIONS_COLLEGUES.md  Prediction-accidents.ipynb  README.rd  app.py  app_fastapi.py  docker-compose.yml  main.py  modele_final.pkl  pyproject.toml  requirements.txt
projet_accidents/.ipynb_checkpoints/: Prediction-accidents-checkpoint.ipynb
projet_accidents/tests/: test_api.py
